2008-08-28  Paul Brook  <paul@codesourcery.com>

	* config/arm/vfp.md: Document fmul{s,d} and fmac{s,d} types.
	Remove documentation entry for fmul type.
	Use fmuls to annotate single-precision multiplication patterns,
	fmuld to annotate double-precision multiplication patterns,
	fmacs to annotate single-precision multiply-accumulate patterns
	and fmacd to annotate double-precision multiply-accumulate patterns.
	* config/arm/vfp11.md: Update reservations accordingly.
	* config/arm/arm.md: Note that certain values of the "type"
	attribute are documented in vfp.md.
	* config/arm/arm1020e.md: Remove out of date duplicate comment.
	(v10_cvt): Use new fmul types.

2008-08-26  Paul Brook   <paul@codesourcery.com>

	* config/arm/vfp.md: Move pipeline description for VFP11 to...
	* config/arm/vfp11.md: ...here.  New.
	* config/arm/arm.md: Include vfp11.md.

2008-08-26  Hans-Peter Nilsson  <hp@axis.com>

	* opts.c (decode_options) [!IRA_COVER_CLASSES]: Add missing
	parameter to inform call.

2008-08-26  Jeff Law  <law@redhat.com>

	* mn10300.md (movqi, movhi): Split i->d*a case into two cases to
	avoid the possibility of getting DATA_OR_ADDRESS_REGS as the
	preferred class when copying a constant into a partial word register.

2008-08-26  Ben Elliston  <bje@au.ibm.com>

	* rtlanal.c: Fix uses of "it's" with "its" where appropriate.
	* cp/typeck.c: Likewise.
	* cp/tree.c: Likewise.
	* gimple-low.c: Likewise.
	* jump.c: Likewise.

2008-08-26  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-build.c, ira-color.c, ira-costs.c, ira.h, ira-lives.c,
	ira.c, ira-conflicts.c, ira-emit.c, ira-int.h: New files.

	* doc/passes.texi: Describe IRA.

	* doc/tm.texi (IRA_COVER_CLASSES,
	IRA_HARD_REGNO_ADD_COST_MULTIPLIER): Describe the new macros.

	* doc/invoke.texi (ira-max-loops-num): Describe the new parameter.
	(-fira, -fira-algorithm, -fira-coalesce, -fno-ira-move-spills,
	-fira-propagate-cost, -fno-ira-share-save-slots,